web: Fix content height on mobile devices

--- a/app/src/app/app.component.less
+++ b/app/src/app/app.component.less
@@ -78,7 +78,8 @@ nz-footer {
         padding: 0 50px;
     }
     .inner-content {
-        height: calc(100vh - 130px);
+        min-height: calc(100vh - 130px);
+        height: 100%;
     }
 }
 
